--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cruise Ships",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,6 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "jest": "^22.4.2"
-  }
+  },
+  "dependencies": {}
 }
